--- a/angular.json
+++ b/angular.json
@@ -72,9 +72,11 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css"             
             ],
-            "scripts": [],
+            "scripts": [              
+              "../node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
             "assets": [
               "src/favicon.ico",
               "src/assets"
